[package]
name = "numbergen"
version = "0.1.0"
edition = "2025"
authors = ["Wayne S."]
description = "A small Rust library for generating random numbers with rand 0.9.2"
license = "MIT"
repository = "https://github.com/wayneasilvaII/numbergen"
readme = "README.md"
categories = ["random", "utilities", "math"]
keywords = ["random", "generator", "utility"]
[dependencies]
rand = "0.9.2"
